This repository now only contains placeholder directories and files, a skeleton for a new Fragments app

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,1 +1,2 @@
-@import '~bootstrap/dist/css/bootstrap.css';
+/* If you need Bootstrap, uncomment this: */
+/* @import '~bootstrap/dist/css/bootstrap.css'; */
